tests/tests/ui/nested_option_field.stderr
error[E0277]: `Option<bool>` cannot be the inner type of a nullable Toasty field
  --> tests/ui/nested_option_field.rs:13:5
   |
13 |     flag: Option<Option<bool>>,
   |     ^^^^ `Option<Option<bool>>` is not a supported field type
   |
   = help: the trait `Present` is not implemented for `Option<bool>`
   = note: a Toasty field can be nullable at most once; nested `Option<Option<_>>` has no on-the-wire encoding, since both layers collapse onto the column's single NULL channel and `Some(None)` becomes indistinguishable from `None`
   = note: for an optional-of-optional, wrap the inner value in `toasty::Json<_>`, which carries its own `null` encoding
   = help: the following other types implement trait `Present`:
             Arc<T>
             Box<T>
             Rc<T>
             Vec<T>
             Vec<u8>
             bigdecimal::BigDecimal
             bool
             f32
           and $N others
   = note: required for `Option<Option<bool>>` to implement `toasty::schema::Field`

error[E0277]: `Option<bool>` cannot be the inner type of a nullable Toasty field
 --> tests/ui/nested_option_field.rs:7:17
  |
7 | #[derive(Debug, toasty::Model)]
  |                 ^^^^^^^^^^^^^ `Option<Option<bool>>` is not a supported field type
  |
  = help: the trait `Present` is not implemented for `Option<bool>`
  = note: a Toasty field can be nullable at most once; nested `Option<Option<_>>` has no on-the-wire encoding, since both layers collapse onto the column's single NULL channel and `Some(None)` becomes indistinguishable from `None`
  = note: for an optional-of-optional, wrap the inner value in `toasty::Json<_>`, which carries its own `null` encoding
  = help: the following other types implement trait `Present`:
            Arc<T>
            Box<T>
            Rc<T>
            Vec<T>
            Vec<u8>
            bigdecimal::BigDecimal
            bool
            f32
          and $N others
  = note: required for `Option<Option<bool>>` to implement `toasty::schema::Field`
  = note: this error originates in the derive macro `toasty::Model` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `impl _toasty::codegen_support::IntoExpr<<Option<Option<bool>> as _toasty::codegen_support::Field>::ExprTarget>: IntoExpr<Option<Option<bool>>>` is not satisfied
 --> tests/ui/nested_option_field.rs:7:17
  |
7 | #[derive(Debug, toasty::Model)]
  |                 ^^^^^^^^^^^^^ unsatisfied trait bound
  |
  = help: the trait `IntoExpr<Option<Option<bool>>>` is not implemented for `impl _toasty::codegen_support::IntoExpr<<Option<Option<bool>> as _toasty::codegen_support::Field>::ExprTarget>`
  = note: this error originates in the derive macro `toasty::Model` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `impl _toasty::codegen_support::Assign<<Option<Option<bool>> as _toasty::codegen_support::Field>::ExprTarget>: Assign<Option<Option<bool>>>` is not satisfied
 --> tests/ui/nested_option_field.rs:7:17
  |
7 | #[derive(Debug, toasty::Model)]
  |                 ^^^^^^^^^^^^^ unsatisfied trait bound
  |
  = help: the trait `Assign<Option<Option<bool>>>` is not implemented for `impl _toasty::codegen_support::Assign<<Option<Option<bool>> as _toasty::codegen_support::Field>::ExprTarget>`
  = note: this error originates in the derive macro `toasty::Model` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: `Option<bool>` cannot be the inner type of a nullable Toasty field
  --> tests/ui/nested_option_field.rs:13:11
   |
13 |     flag: Option<Option<bool>>,
   |           ^^^^^^^^^^^^^^^^^^^^ `Option<Option<bool>>` is not a supported field type
   |
   = help: the trait `Present` is not implemented for `Option<bool>`
   = note: a Toasty field can be nullable at most once; nested `Option<Option<_>>` has no on-the-wire encoding, since both layers collapse onto the column's single NULL channel and `Some(None)` becomes indistinguishable from `None`
   = note: for an optional-of-optional, wrap the inner value in `toasty::Json<_>`, which carries its own `null` encoding
   = help: the following other types implement trait `Present`:
             Arc<T>
             Box<T>
             Rc<T>
             Vec<T>
             Vec<u8>
             bigdecimal::BigDecimal
             bool
             f32
           and $N others
   = note: required for `Option<Option<bool>>` to implement `toasty::schema::Field`

error[E0277]: the trait bound `impl _toasty::codegen_support::Assign<<Option<Option<bool>> as _toasty::codegen_support::Field>::ExprTarget>: Assign<Option<Option<bool>>>` is not satisfied
  --> tests/ui/nested_option_field.rs:13:5
   |
13 |     flag: Option<Option<bool>>,
   |     ^^^^ unsatisfied trait bound
   |
   = help: the trait `Assign<Option<Option<bool>>>` is not implemented for `impl _toasty::codegen_support::Assign<<Option<Option<bool>> as _toasty::codegen_support::Field>::ExprTarget>`
note: required by a bound in `DocUpdate::<__toasty_T>::set_flag`
  --> tests/ui/nested_option_field.rs:7:17
   |
 7 | #[derive(Debug, toasty::Model)]
   |                 ^^^^^^^^^^^^^ required by this bound in `DocUpdate::<__toasty_T>::set_flag`
...
13 |     flag: Option<Option<bool>>,
   |     ---- required by a bound in this associated function
   = note: this error originates in the derive macro `toasty::Model` (in Nightly builds, run with -Z macro-backtrace for more info)
